--- a/capme/.css/capme.css
+++ b/capme/.css/capme.css
@@ -173,6 +173,24 @@ span.capme_close:hover {
   cursor: pointer
 }
 
+div.user {
+margin-left:10px;
+width:200px;
+margin-top:5px;
+float:left;
+color:#4D5580;
+font-size:11px;
+}
+
+span.logout {
+cursor:pointer;
+margin-left:7px;
+color:#a3a3a3;
+}
+span.logout:hover {
+color:#000;
+}
+
 .capme_result {
   display: none;
 }
