--- a/capme/.css/capme.css
+++ b/capme/.css/capme.css
@@ -157,7 +157,26 @@ td.capme_close {
   border-top-right-radius: 5px;
 }
 
-span.capme_close {
+td.capme_close_button {
+  width: 940px;
+  text-align: right;
+  background: #ffffff;
+  color: #ffffff;
+  font-size: 11px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  padding-right: 15px;
+  padding-top: 15px;
+  border: 1pt solid #c9c9c9;
+  border-bottom: none;
+  word-wrap: break-word;
+  word-break: break-all;
+  display: inline-block;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+span.capme_close_button {
   background-color: #e9e9e9;
   color: #000000;
   font-weight: bold;
@@ -167,7 +186,7 @@ span.capme_close {
   border-radius: 2px;
 }
 
-span.capme_close:hover {
+span.capme_close_button:hover {
   background-color: #ffffff;
   color: #000000;
   cursor: pointer
